--- a/Project2/TournamentManager/src/app/components/account-creation/account-creation.component.html
+++ b/Project2/TournamentManager/src/app/components/account-creation/account-creation.component.html
@@ -1,3 +1,20 @@
-<p>
-  account-creation works!
-</p>
+<div class="form-container" id="participant-registration">
+  <form (ngSubmit)="onSubmit()" #organizerForm="ngForm">
+    <div>
+      <label for="username">Username: </label>
+      <input type="text" id="username" [(ngModel)]="newOrganizer.username" name="username" required>
+    </div>
+    <div>
+      <label for="password">Last Name: </label>
+      <input type="password" id="password" [(ngModel)]="newOrganizer.password" name="password" required>
+    </div>
+    <div>
+      <label for="email">E-mail: </label>
+      <input type="email" id="email" [(ngModel)]="newOrganizer.email" name="email" required>
+    </div>
+    <div>
+      <button type="submit" [disabled]="!organizerForm.form.valid">Submit</button>
+      <button type="reset">Reset</button>
+    </div>
+  </form>
+</div>
