--- a/Project2/TournamentManager/src/app/components/login/login.component.html
+++ b/Project2/TournamentManager/src/app/components/login/login.component.html
@@ -1,3 +1,14 @@
-<p>
-  login works!
-</p>
+<div class="form-container" id="login-form">
+  <form #loginForm="ngForm" novalidate (ngSubmit)="loginSubmit()">
+    <div>
+      <input type="text" name="user_email" placeholder="email" [(ngModel)]="user_email" required>
+    </div>
+    <div>
+      <input type="password" name="password" placeholder="password" [(ngModel)]="password" required>
+    </div>
+    <div>
+      <button type="submit" [disabled]="!loginForm.valid">Login</button>
+      <button type="reset">Reset</button>
+    </div>
+  </form>
+</div>
