--- a/Project2/TournamentManager/src/app/components/login/login.component.html
+++ b/Project2/TournamentManager/src/app/components/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="form-container" id="login-form">
   <form #loginForm="ngForm" novalidate (ngSubmit)="loginSubmit()">
     <div>
-      <input type="text" name="user_email" placeholder="email" [(ngModel)]="user_email" required>
+      <input type="text" name="user_email" placeholder="email" [(ngModel)]="username" required>
     </div>
     <div>
       <input type="password" name="password" placeholder="password" [(ngModel)]="password" required>
