--- a/Project2/TournamentManager/src/app/components/participant-search/participant-search.component.html
+++ b/Project2/TournamentManager/src/app/components/participant-search/participant-search.component.html
@@ -1,4 +1,5 @@
 <input [(ngModel)]="searchText" placeholder="Participant Name">
 <ul>
-  <li *ngFor="let p of participants | filter : searchText">{{p.firstName}} {{p.lastNmae}}</li>
+  <li *ngFor="let p of participants | searchUtil : searchText">{{p.firstName}} {{p.lastNmae}}</li>
 </ul>
+<button type="button" (click)="goBack()">Go Back</button>
