Display the List
Search is non-functional at this point

--- a/Project2/TournamentManager/src/app/components/participant-search/participant-search.component.html
+++ b/Project2/TournamentManager/src/app/components/participant-search/participant-search.component.html
@@ -1,4 +1,4 @@
 <input [(ngModel)]="searchText" placeholder="Participant Name">
 <ul>
-  <li *ngFor="let p of participants | filter : searchText">{{p.firstName}} {{p.lastNmae}}</li>
+  <li *ngFor="let p of participants">{{p.firstName}} {{p.lastName}}</li>
 </ul>
