--- a/Project2/TournamentManager/src/app/components/participant-register/participant-register.component.html
+++ b/Project2/TournamentManager/src/app/components/participant-register/participant-register.component.html
@@ -1,9 +1,4 @@
-<<<<<<< Updated upstream
 
-<div class="form-container" id="participant-registration">
-  <form (ngSubmit)="submitFinish()" #participantForm="ngForm">
-    <div>
-=======
 <div class="bg-primary" id="html" >
     <div class="row justify-content-center align-items-center" style="height:100vh">
         <div class="col-4">
@@ -12,7 +7,7 @@
   <h4  class=" pb-3 section one text-center ">Participant Registration</h4>
   <form class="pb-3" (ngSubmit)="onSubmit()" #participantForm="ngForm">
     <div class="form-group">
->>>>>>> Stashed changes
+      <!-- <button class=glyphicon-chevron-left></button>  -->
       <label for="firstName">First Name: </label>
       <input type="text" class="form-control" placeholder= "Bobby"[(ngModel)]="newParticipant.firstName" required>
     </div>
@@ -20,16 +15,6 @@
       <label for="lastName">Last Name: </label>
       <input type="text" id="lastName"  class="form-control" placeholder= "Kernel"[(ngModel)]="newParticipant.lastName" name="lastName" required>
     </div>
-<<<<<<< Updated upstream
-    <div>
-      <label for="email">Email: </label>
-      <input type="email" id="email" [(ngModel)]="newParticipant.email" required>
-    </div>
-    <div>
-      <button type="submit" [disabled]="!participantForm.form.valid">Submit</button>
-      <button type="reset">Reset</button>
-      <button type="button" [disabled]="!participantForm.form.valid" (click)="submitContinue()">Submit and add Another</button>
-=======
   
   <div class="form-group">
     <label for="email">Email: </label>
@@ -37,10 +22,10 @@
   </div >
     
     <div class="btn-toolbar "> 
-      <button  class="btn btn-success btn-sm col " type="button" id="btnSubmit" [disabled]="!participantForm.form.valid"> Submit</button>
+      <button  class="btn btn-success btn-sm col " type="button" id="btn" [disabled]="!participantForm.form.valid"> Submit</button>
     
-      <button  class="btn btn-danger btn-sm col "type="button" id="btnCancel" >Reset</button>
->>>>>>> Stashed changes
+      <button  class="btn btn-danger btn-sm col "type="button" id="btn" >Reset</button>
+      <button  class="btn btn-info btn-sm col"  type="button" id="">Sumbit and add new participant</button>
     </div>
   </form>
 </div>
