--- a/Project2/TournamentManager/src/app/components/participant-register/participant-register.component.html
+++ b/Project2/TournamentManager/src/app/components/participant-register/participant-register.component.html
@@ -5,11 +5,11 @@
             <div class="card mt-sm-3 mb-sm-5 " id="my-preview-div">
 <div  class="form-container w-400 p-3 h-150 " >
   <h4  class=" pb-3 section one text-center ">Participant Registration</h4>
-  <form class="pb-3" (ngSubmit)="onSubmit()" #participantForm="ngForm">
+  <form class="pb-3" #participantForm="ngForm" name="participantForm">
     <div class="form-group">
       <!-- <button class=glyphicon-chevron-left></button>  -->
       <label for="firstName">First Name: </label>
-      <input type="text" class="form-control" placeholder= "Bobby"[(ngModel)]="newParticipant.firstName" required>
+      <input type="text" id="firstName" class="form-control" placeholder= "Bobby" [(ngModel)]="newParticipant.firstName" required name="firstName">
     </div>
     <div class="form-group">
       <label for="lastName">Last Name: </label>
@@ -18,14 +18,14 @@
   
   <div class="form-group">
     <label for="email">Email: </label>
-    <input type="email" id="email"  class="form-control" placeholder= "BobbyK@gmail.com"[(ngModel)]="newParticipant.email" name="lastName" required>
+    <input type="email" id="email"  class="form-control" placeholder= "BobbyK@gmail.com"[(ngModel)]="newParticipant.email" name="email" required>
   </div >
     
     <div class="btn-toolbar "> 
-      <button  class="btn btn-success btn-sm col " type="button" id="btn" [disabled]="!participantForm.form.valid"> Submit</button>
+      <button  class="btn btn-success btn-sm col " type="button" id="btn-submit" [disabled]="!participantForm.form.valid" (click)="createReturn()"> Submit</button>
     
-      <button  class="btn btn-danger btn-sm col "type="button" id="btn" >Reset</button>
-      <button  class="btn btn-info btn-sm col"  type="button" id="">Sumbit and add new participant</button>
+      <button  class="btn btn-danger btn-sm col "type="reset" id="btn-reset" >Reset</button>
+      <button  class="btn btn-info btn-sm col"  type="reset" id="btn-repeat" (click)="createContinue(participantForm)">Sumbit and add new participant</button>
     </div>
   </form>
 </div>
