--- a/Project2/TournamentManager/src/app/components/login/login.component.html
+++ b/Project2/TournamentManager/src/app/components/login/login.component.html
@@ -11,4 +11,5 @@
       <button type="reset">Reset</button>
     </div>
   </form>
+  <button (click)="accountCreation()">Register an Account</button>
 </div>
