--- a/Project2/TournamentManager/src/app/components/participant-register/participant-register.component.css
+++ b/Project2/TournamentManager/src/app/components/participant-register/participant-register.component.css
@@ -14,7 +14,7 @@ background-size: 150% 100%;
 
 }
 #my-preview-div {
-    transform: scale(2.0);   
+    transform: scale(1.5);   
     /* height: 500px;
     weight: 700px;   */
     }
@@ -23,3 +23,7 @@ background-size: 150% 100%;
         background-color: lightblue; 
         background-size: cover;
       }
+
+#shiftdown{
+    padding-top: 80px;
+}
