--- a/Project2/TournamentManager/src/app/components/navigation/navigation.component.html
+++ b/Project2/TournamentManager/src/app/components/navigation/navigation.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar fixed-top navbar-expand-sm navbar-light bg-white">
+<nav>
   <ul>
     <li *ngFor="let item of navItems">
       <a [routerLink]=[item.link] class="nav-link">{{item.title}}</a>
