--- a/Project2/TournamentManager/src/app/components/account-creation/account-creation.component.html
+++ b/Project2/TournamentManager/src/app/components/account-creation/account-creation.component.html
@@ -1,19 +1,19 @@
 <div class="form-container" id="organizer-registration">
-  <form (ngSubmit)="onSubmit()" novalidate #organizerForm="ngForm">
+  <form #organizerForm="ngForm" novalidate (ngSubmit)="onSubmit()">
     <div>
       <label for="username">Username: </label>
-      <input type="text" id="username" [(ngModel)]="newOrganizer.username" name="username" required>
+      <input type="text" name="username" id="username" placeholder="Username" [(ngModel)]="username" required>
     </div>
     <div>
-      <label for="password">Last Name: </label>
-      <input type="password" id="password" [(ngModel)]="newOrganizer.password" name="password" required>
+      <label for="password">Password: </label>
+      <input type="password" name="password" id="password" placeholder="Password" [(ngModel)]="password" required>
     </div>
     <div>
       <label for="email">E-mail: </label>
-      <input type="email" id="email" [(ngModel)]="newOrganizer.email" name="email" required>
+      <input type="text" name="email" id="email" placeholder="Email" [(ngModel)]="email" required>
     </div>
     <div>
-      <button type="submit" [disabled]="!organizerForm.form.valid">Submit</button>
+      <button type="submit" [disabled]="!organizerForm.valid">Submit</button>
       <button type="reset">Reset</button>
     </div>
   </form>
