Organizer Registration Functional

--- a/Project2/TournamentManager/src/app/components/login/login.component.html
+++ b/Project2/TournamentManager/src/app/components/login/login.component.html
@@ -37,7 +37,7 @@
     
                   
                   <button [disabled]="!loginForm.valid" class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">Sign in</button>
-                  <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">Create new account</button>
+                  <button class="btn btn-lg btn-primary btn-block text-uppercase" type="button" (click)="accountCreation()">Create new account</button>
                   
                 </form>
               </div>
@@ -77,4 +77,3 @@
       </div>
     </div>
   </body> -->
-  
