--- a/Project2/TournamentManager/src/app/components/account-creation/account-creation.component.html
+++ b/Project2/TournamentManager/src/app/components/account-creation/account-creation.component.html
@@ -2,15 +2,15 @@
   <form #organizerForm="ngForm" novalidate (ngSubmit)="onSubmit()">
     <div>
       <label for="username">Username: </label>
-      <input type="text" name="username" id="username" placeholder="Username" [(ngModel)]="username" required>
+      <input type="text" name="username" id="username" placeholder="Username" [(ngModel)]="newOrganizer.username" required>
     </div>
     <div>
       <label for="password">Password: </label>
-      <input type="password" name="password" id="password" placeholder="Password" [(ngModel)]="password" required>
+      <input type="password" name="password" id="password" placeholder="Password" [(ngModel)]="newOrganizer.password" required>
     </div>
     <div>
       <label for="email">E-mail: </label>
-      <input type="text" name="email" id="email" placeholder="Email" [(ngModel)]="email" required>
+      <input type="text" name="email" id="email" placeholder="Email" [(ngModel)]="newOrganizer.email" required>
     </div>
     <div>
       <button type="submit" [disabled]="!organizerForm.valid">Submit</button>
