--- a/Project2/TournamentManager/src/app/components/navigation/navigation.component.html
+++ b/Project2/TournamentManager/src/app/components/navigation/navigation.component.html
@@ -3,6 +3,10 @@
     <li *ngFor="let item of navItems">
       <a [routerLink]=[item.link] class="nav-link">{{item.title}}</a>
     </li>
-    <button (click)="logout()">Logout</button>
+    <button (click)="logout()" style="
+    float: right;
+    margin-right: 20px;
+    margin-top: 5px;
+">Logout</button>
   </ul>
 </nav>
