--- a/Project2/TournamentManager/src/app/components/tournament/tournament.component.html
+++ b/Project2/TournamentManager/src/app/components/tournament/tournament.component.html
@@ -1,3 +1,17 @@
 <p>
   tournament works!
 </p>
+<form>
+  <div>
+    <table>
+      <tr>
+        <th>Player 1</th><th>VS.</th><th>Player 2</th><th>Player 1 Wins:</th><th>Player 2 Wins:</th><th>Lock result</th>
+      </tr>
+      <tr>
+        <td>Joe Milne</td><td>VS.</td><td>Chris Oberg</td><td><input type="number" value="0" style="width: 4em; float: right;"/></td><td><input type="number" value="0" style="width: 4em; float: right;"/></td><td><input type="checkbox" style="margin-left: 30%;" required/></td>
+      </tr>
+    </table>
+  </div>
+  <button type="button" [disabled]="true">Submit round results</button>
+</form>
+<app-tournament-item></app-tournament-item>
