--- a/Project2/TournamentManager/src/app/components/new-event/new-event.component.html
+++ b/Project2/TournamentManager/src/app/components/new-event/new-event.component.html
@@ -1,38 +1,17 @@
 <div class="form-container" id="event-creation">
   <form #eventForm="ngForm" novalidate (ngSubmit)="onSubmit()">
     <div>
-      <label for="count">Player Count: </label>
-      <input type="number" name="count" id="count" min="2" value="2" [(ngModel)]="newEvent.player_count" required>
-    </div>
-    <div>
       <label for="type">Event Type: </label>
-      <select name="type" id="type" [(ngModel)]="newEvent.evt_type" required>
-        <option ng-selected="selected" value="Custom">Custom</option>
-        <option value="Single Elimination">Single Elimination</option>
-        <option value="Double Elimination">Double Elimination</option>
-        <option value="Swiss">Swiss</option>
-        <option value="Round Robin">Round Robin</option>
+      <select name="type" id="type" [(ngModel)]="usedFormat">
+        <option *ngFor="let format of formats" [ngValue]="format">{{format.title}}</option>
       </select>
     </div>
     <div>
       <label for="description" style="vertical-align: top;">Event Description: </label>
-      <textarea name="event-description" id="description" placeholder="Event Description" [(ngModel)]="newEvent.evt_desc" required></textarea>
+      <textarea name="event-description" id="description" placeholder="Event Description" [(ngModel)]="evt_desc" required></textarea>
     </div>
     <div>
-      <select size="15" [(ngModel)]="additions" multiple="multiple" name="participantPotential">
-        <option *ngFor="let p of participants" value="p">{{p.name}}</option>
-      </select>
-      <select size="15" [(ngModel)]="removals" multiple="multiple" name="currentEntrants">
-        <option *ngFor="let e of entrants" value="e">{{e.name}}</option>
-      </select>
-    </div>
-    <div>
-      <button type="button" (click)="addEntrants()"> + </button>
-      <button type="button" (click)="removeEntrants()"> - </button>
-    </div>
-    <div>
-      <button type="submit" [disabled]="!eventForm.valid">Submit</button>
-      <button type="reset">Reset</button>
+      <button type="submit">Submit</button>
     </div>
   </form>
 </div>
