--- a/Project2/TournamentManager/src/app/components/tournament-item/tournament-item.component.html
+++ b/Project2/TournamentManager/src/app/components/tournament-item/tournament-item.component.html
@@ -1,7 +1,3 @@
-<!--<tr>-->
-  <!--<td>Joe Milne</td><td>VS.</td><td>Chris Oberg</td><td><input type="number" value="0" style="width: 4em; float: right;"/></td><td><input type="number" value="0" style="width: 4em; float: right;"/></td><td><input type="checkbox" style="margin-left: 30%;" required/></td>-->
-<!--</tr>-->
-
 <form>
   <div>
     <table>
@@ -11,8 +7,7 @@
       <tr>
         <td>Joe Milne</td><td>VS.</td><td>Chris Oberg</td><td><input type="number" value="0" style="width: 4em; float: right;"/></td><td><input type="number" value="0" style="width: 4em; float: right;"/></td><td><input type="checkbox" style="margin-left: 30%;" required/></td>
       </tr>
-      <!--<app-tournament-item></app-tournament-item>-->
     </table>
   </div>
-  <button type="button" [disabled]="true">Submit round results</button>
+  <button type="button" [disabled]="true" (click)="[roundSubmit()]">Submit round results</button> <button type="button" (click)="[finalSubmit()]">Tournament is over</button>
 </form>
