new event bootstrap fix
made the opacity 1 and created a logout icon for the nav component

--- a/Project2/TournamentManager/src/app/components/navigation/navigation.component.html
+++ b/Project2/TournamentManager/src/app/components/navigation/navigation.component.html
@@ -2,7 +2,8 @@
   <ul>
     <li *ngFor="let item of navItems">
       <a [routerLink]=[item.link] class="nav-link">{{item.title}}</a>
+      
     </li>
-    <button (click)="logout()" id="logout">Logout</button>
+    <button (click)="logout()" id="logout"><i class="fas fa-sign-out-alt"></i>Logout</button>
   </ul>
 </nav>
