--- a/Project2/TournamentManager/src/app/components/new-event/new-event.component.html
+++ b/Project2/TournamentManager/src/app/components/new-event/new-event.component.html
@@ -1,5 +1,5 @@
 <body id="bar" class="bg-primary">
-    <div class="container-fluid">
+    <div class="">
 
         <div class="d-flex justify-content-center" id=pad>
             <div class="card p-4 " id="my-preview-div">
