--- a/Project2/TournamentManager/src/app/components/account-creation/account-creation.component.html
+++ b/Project2/TournamentManager/src/app/components/account-creation/account-creation.component.html
@@ -1,32 +1,31 @@
 <div class="bg-primary bg" id=fullpage>
-<div class="row justify-content-center align-items-center">
+  <div class="row justify-content-center align-items-center">
     <div class="col-10 col-sm-2 col-md-6" id=pad>
       <div class="card mt-sm-3 mb-sm-5 " id="my-preview-div">
 
-
-<div class="form-container w-400 p-3 h-150" id="organizer-registration">
-    <button type="button" class="btn btn-light"> <i class="fas fa-angle-left"></i> </button>
-    <h4 class=" pb-3 section one text-center ">Account Creation</h4>
-  <form #organizerForm="ngForm" novalidate (ngSubmit)="onSubmit()">
-    <div>
-      <label for="username">Username: </label>
-      <input type="text" class="form-control" name="username" id="username" placeholder="Username" [(ngModel)]="newOrganizer.username" required>
+        <div class="form-container w-400 p-3 h-150" id="organizer-registration">
+          <button type="button" class="btn btn-light" (click)="redirect()"> <i class="fas fa-angle-left"></i> </button>
+          <h4 class=" pb-3 section one text-center ">Account Creation</h4>
+          <form #organizerForm="ngForm" novalidate (ngSubmit)="onSubmit()">
+            <div>
+              <label for="username">Username: </label>
+              <input type="text" class="form-control" name="username" id="username" placeholder="Username" [(ngModel)]="newOrganizer.username" required>
+            </div>
+            <div>
+              <label for="password">Password: </label>
+              <input type="password" class="form-control" name="password" id="password" placeholder="Password" [(ngModel)]="newOrganizer.password" required>
+            </div>
+            <div>
+              <label for="email">E-mail: </label>
+              <input type="text" class="form-control" name="email" id="email" placeholder="Email" [(ngModel)]="newOrganizer.email" required>
+            </div>
+            <div class="btn-toolbar d-flex justify-content-around">
+              <button  class="btn btn-success btn-sm col m-3" type="button" [disabled]="!organizerForm.valid">Submit</button>
+              <button  class="btn btn-danger btn-sm col m-3" type="button">Reset</button>
+            </div>
+          </form>
+        </div>
+      </div>
     </div>
-    <div>
-      <label for="password">Password: </label>
-      <input type="password" class="form-control" name="password" id="password" placeholder="Password" [(ngModel)]="newOrganizer.password" required>
-    </div>
-    <div>
-      <label for="email">E-mail: </label>
-      <input type="text" class="form-control" name="email" id="email" placeholder="Email" [(ngModel)]="newOrganizer.email" required>
-    </div>
-    <div class="btn-toolbar d-flex justify-content-around">
-      <button  class="btn btn-success btn-sm col m-3" type="button" [disabled]="!organizerForm.valid">Submit</button>
-      <button  class="btn btn-danger btn-sm col m-3" type="button">Reset</button>
-    </div>
-  </form>
-</div>
-</div>
-</div>
-</div>
+  </div>
 </div>
