--- a/Project2/TournamentManager/src/app/components/participant-register/participant-register.component.html
+++ b/Project2/TournamentManager/src/app/components/participant-register/participant-register.component.html
@@ -1,10 +1,9 @@
-
 <div class="bg-primary bg" id=fullpage>
   <div class="row justify-content-center align-items-center">
     <div class="col-10 col-sm-2 col-md-6" id=pad>
       <div class="card mt-sm-3 mb-sm-5 " id="my-preview-div">
         <div class="form-container w-400 p-3 h-150 " id="shiftdown">
-            <button type="button" class="btn btn-light"> <i class="fas fa-angle-left"></i> </button>
+          <button type="button" class="btn btn-light" (click)="redirect()"> <i class="fas fa-angle-left"></i> </button>
           <h4 class=" pb-3 section one text-center ">Participant Registration</h4>
           <form class="pb-3" #participantForm="ngForm">
             <div class="form-group">
