Forwards on the New Event

--- a/Project2/TournamentManager/src/app/components/new-event/new-event.component.html
+++ b/Project2/TournamentManager/src/app/components/new-event/new-event.component.html
@@ -35,6 +35,7 @@
             </div>
             <div class="d-flex justify-content-center">
               <button type="submit" class="btn btn-primary mt-5 w-50" [disabled]="!eventForm.valid">Submit</button>
+              <!--<button type="button" class="btn btn-primary mt-5 w-50" (click)="getEvents()">getSomeEvents</button>-->
             </div>
           </form>
         </div>
