Slight Code Updates

--- a/Project2/TournamentManager/src/app/components/tournament-item/tournament-item.component.html
+++ b/Project2/TournamentManager/src/app/components/tournament-item/tournament-item.component.html
@@ -11,5 +11,5 @@
       </tr>
     </table>
   </div>
-  <button type="button" [disabled]="true" (click)="[roundSubmit()]">Submit round results</button> <button type="button" (click)="[finalSubmit()]">Tournament is over</button>
+  <button type="button" [disabled]="true" (click)="roundSubmit()">Submit round results</button> <button type="button" (click)="finalSubmit()">Tournament is over</button>
 </form>
