Event Creation works --enough

--- a/Project2/TournamentManager/src/app/components/new-event/new-event.component.html
+++ b/Project2/TournamentManager/src/app/components/new-event/new-event.component.html
@@ -44,8 +44,13 @@
         <button type="button" class="btn btn-success" (click)="addParticipants()">Add Participants</button>
         <button type="button"  class="btn btn-danger" (click)="removeParticipants()">Remove Participants</button>
       </div>
+
+          <div class="d-flex justify-content-center">
+            <button type="sumbit" class="btn btn-primary nt-5 w50" [disabled]="!eventForm.valid">Submit</button>
+          </div>
+        </form>
     </div>
-  </div>
+
   </div>
   </div>
 
