--- a/Project2/TournamentManager/src/app/components/new-event/new-event.component.html
+++ b/Project2/TournamentManager/src/app/components/new-event/new-event.component.html
@@ -23,7 +23,7 @@
     </div>
     <div class="d-flex justify-content-around mt-4 ">
       <label id="player-count">Player Count: {{playerCount}}</label>
-      <label for="manualization">Manually Assign Seeding: <input name="manualization" type="checkbox" id="manualization" [(ngModel)]="manual"></label>
+      <!--<label for="manualization">Manually Assign Seeding: <input name="manualization" type="checkbox" id="manualization" [(ngModel)]="manual"></label>-->
       
     </div>
    
