--- a/Project2/TournamentManager/src/app/components/main-menu/main-menu.component.html
+++ b/Project2/TournamentManager/src/app/components/main-menu/main-menu.component.html
@@ -1,19 +1,20 @@
-<body  id="wow" >
+<body id="wow">
 
-    <div  class=" container d-flex p-3 mx-auto flex-column">
-        <div class = "column ">
-            <div class = "row m-5">
-                
+    <div class=" container d-flex p-3 mx-auto flex-column">
+        <div class="column ">
+            <div class="row m-5">
+
                 <button type="button" class="col btn btn-light " (click)="goToEventCreator()">
-                        <i class="far fa-calendar-plus mr-1"></i>
+                    <i class="far fa-calendar-plus mr-1"></i>
                     Create new Event</button></div>
-            <div class = "row  m-5">
+            <div class="row  m-5">
                 <button type="button" class="col btn btn-light" (click)="goToParticipantRegistry()">
-                    <i class="far fa-address-card mr-1"></i>  
+                    <i class="far fa-address-card mr-1"></i>
                     Register new Participant</button>
             </div>
-            <div class = "row  m-5"> 
-                    <button type="button" class="col btn btn-light" (click)="goToParticipantLookup()"> <i class="far fa-address-book mr-1"></i> Participant Lookup</button></div>
+            <div class="row  m-5">
+                <button type="button" class="col btn btn-light" (click)="goToParticipantLookup()"> <i
+                        class="far fa-address-book mr-1"></i> Participant Lookup</button></div>
         </div>
     </div>
 </body>
