--- a/Project2/TournamentManager/src/app/components/participant-register/participant-register.component.html
+++ b/Project2/TournamentManager/src/app/components/participant-register/participant-register.component.html
@@ -1,28 +1,32 @@
-
 <div class="bg-primary bg" id=fullpage>
   <div class="row justify-content-center align-items-center">
     <div class="col-10 col-sm-2 col-md-6" id=pad>
       <div class="card mt-sm-3 mb-sm-5 " id="my-preview-div">
         <div class="form-container w-400 p-3 h-150 " id="shiftdown">
-            <button type="button" class="btn btn-light"> <i class="fas fa-angle-left"></i> </button>
+          <button type="button" class="btn btn-light"> <i class="fas fa-angle-left"></i> </button>
           <h4 class=" pb-3 section one text-center ">Participant Registration</h4>
           <form class="pb-3" #participantForm="ngForm">
             <div class="form-group">
               <label for="firstName">First Name: </label>
-              <input type="text" id="firstName" class="form-control" placeholder= "Bobby"[(ngModel)]="newParticipant.firstName" name="firstName" required>
+              <input type="text" id="firstName" class="form-control" placeholder="Bobby"
+                [(ngModel)]="newParticipant.firstName" name="firstName" required>
             </div>
             <div class="form-group">
               <label for="lastName">Last Name: </label>
-              <input type="text" id="lastName"  class="form-control" placeholder= "Kernel"[(ngModel)]="newParticipant.lastName" name="lastName" required>
+              <input type="text" id="lastName" class="form-control" placeholder="Kernel"
+                [(ngModel)]="newParticipant.lastName" name="lastName" required>
             </div>
             <div class="form-group">
               <label for="email">Email: </label>
-              <input type="email" id="email"  class="form-control" placeholder= "BobbyK@gmail.com"[(ngModel)]="newParticipant.email" name="email" required>
+              <input type="email" id="email" class="form-control" placeholder="BobbyK@gmail.com"
+                [(ngModel)]="newParticipant.email" name="email" required>
             </div>
-            <div class="btn-toolbar d-flex justify-content-around"> 
-              <button  class="btn btn-success btn-sm col m-3" type="button" id="submit" (click)="createReturn()" [disabled]="!participantForm.form.valid"> Submit</button>
-              <button  class="btn btn-danger btn-sm col m-3"type="button" id="reset" >Reset</button>
-              <button  class="btn btn-info btn-sm col m-3"  type="button" id="loop" (click)="createContinue(participantForm)">Sumbit and add new participant</button>
+            <div class="btn-toolbar d-flex justify-content-around">
+              <button class="btn btn-success btn-sm col m-3" type="button" id="submit" (click)="createReturn()"
+                [disabled]="!participantForm.form.valid"> Submit</button>
+              <button class="btn btn-danger btn-sm col m-3" type="button" id="reset">Reset</button>
+              <button class="btn btn-info btn-sm col m-3" type="button" id="loop"
+                (click)="createContinue(participantForm)">Sumbit and add new participant</button>
             </div>
           </form>
         </div>
@@ -30,4 +34,3 @@
     </div>
   </div>
 </div>
-
