--- a/Project2/TournamentManager/src/app/components/tournament/tournament.component.html
+++ b/Project2/TournamentManager/src/app/components/tournament/tournament.component.html
@@ -1,7 +1,24 @@
-<p>
-  This is the tournament!
-</p>
-<p>
-  Below are your round pairings!
-</p>
-<app-tournament-item></app-tournament-item>
+<div id="bar">
+  <div class="card p-4 rounded mt-5" id="my-preview-div">
+
+    <div class=" card-body" id="pad">
+      <div class="container" id="center">
+        <div class="">
+          
+            <h1 class="col center">
+              This is the tournament!
+            </h1>
+        
+        </div>
+        <div class="row">
+          <p>
+              <i class="fas fa-angle-down"></i>
+            Below are your round pairings!
+          </p>
+        </div>
+        <app-tournament-item></app-tournament-item>
+      </div>
+
+    </div>
+  </div>
+</div>
