--- a/Project2/TournamentManager/src/app/components/tournament-item/tournament-item.component.html
+++ b/Project2/TournamentManager/src/app/components/tournament-item/tournament-item.component.html
@@ -1,17 +1,36 @@
 <form>
-  <label>Event ID: {{currentEvent.eventId}}</label><br>
-  <label>Round Number: {{currentRound.roundNum}}</label>
+  <label><i class="far fa-calendar mr-3"></i>Event ID: {{currentEvent.eventId}}</label><br>
+  <label><i class="fab fa-slack-hash mr-3"></i>Round Number: {{currentRound.roundNum}}</label>
   <div>
-    <table>
+    <table class="table">
+      <thead>
       <tr>
-        <th>Player 1</th><th>VS.</th><th>Player 2</th><th>Player 1 Score:</th><th>Player 2 Score:</th><th>Lock result</th>
+        <th scope="col">Player 1</th>
+        <th scope="col">VS.</th>
+        <th scope="col">Player 2</th>
+        <th scope="col">Player 1 Score:</th>
+        <th scope="col">Player 2 Score:</th>
+        <th scope="col">Lock result</th>
       </tr>
+    </thead>
+    <tbody>
       <tr *ngFor="let match of roundMatches">
-        <td>{{match.p1.name}}</td><td>VS.</td><td>{{match.p2.name}}</td><td><input name="P1Score" [(ngModel)]="match.p1Score" type="number" value="0" style="width: 4em; float: right;"/></td><td><input name="P2Score" [(ngModel)]="match.p2Score" type="number" value="0" style="width: 4em; float: right;"/></td><td><input type="checkbox" name="lockCheck" [(ngModel)]="match.lock" style="margin-left: 30%;" required/></td>
+        <td>{{match.p1.name}}</td>
+        <td>VS.</td>
+        <td>{{match.p2.name}}</td>
+        <td><input id="scores" name="P1Score" [(ngModel)]="match.p1Score" type="number" value="0"
+            style="width: 4em; float: right;" /></td>
+        <td><input id="scores"name="P2Score" [(ngModel)]="match.p2Score" type="number" value="0"
+            style="width: 4em; float: right;" /></td>
+        <td><input type="checkbox" name="lockCheck" [(ngModel)]="match.lock" style="margin-left: 30%;" required /></td>
       </tr>
+    </tbody>
     </table>
   </div>
-  <button type="button" [disabled]="!currentEvent.in_progress" (click)="roundSubmit()">Submit round results</button> <button type="button" [disabled]="!currentEvent.in_progress" (click)="finalSubmit()">Tournament is over</button>
+  <div class="d-flex justify-content-around">
+  <button class="btn btn-primary" type="button" [disabled]="!currentEvent.in_progress" (click)="roundSubmit()">Submit round results</button>
+  <button class="btn btn-success"  [disabled]="!currentEvent.in_progress" (click)="finalSubmit()">Tournament is over</button>
+</div>
 </form>
 <br>
 <div *ngIf="!currentEvent.in_progress">
